--- a/mantis/build.gradle
+++ b/mantis/build.gradle
@@ -10,6 +10,10 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.3.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-7'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'org.hibernate:hibernate-core:6.0.0.Alpha7'
+    implementation 'mysql:mysql-connector-java:8.0.23'
 }
 
 test {
@@ -23,4 +27,3 @@ test {
         systemProperty 'settings', "${settings}"
     }
 }
-
