--- a/mantis/build.gradle
+++ b/mantis/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.api.tasks.testing.Test
-
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -11,10 +9,12 @@ dependencies {
     implementation 'org.testng:testng:7.3.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-7'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'org.hibernate:hibernate-core:6.0.0.Alpha7'
     implementation 'mysql:mysql-connector-java:8.0.23'
     implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
