--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
 baseUrl=http://localhost/addressbook/
 login=admin
 password=secret
-seleniumServer=
+seleniumServer=http://192.168.1.102:4444/wd/hub
